[package]
name = "os-thread-local"
version = "0.1.3"
authors = ["Mike Hommey <mh@glandium.org>"]
license = "Apache-2.0/MIT"
edition = "2018"
description = """OS-backed thread-local storage.

This crate provides a `ThreadLocal` type as an alternative to
`std::thread_local!` that allows per-object thread-local storage, while
providing a similar API. It always uses the thread-local storage primitives
provided by the OS.
"""
repository = "https://github.com/glandium/os-thread-local"
readme = "README.md"
keywords = ["os"]

[badges.travis-ci]
repository = "glandium/os-thread-local"

[target.'cfg(not(windows))'.dependencies.libc]
version = "0.2"
default-features = false

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["fibersapi"]

[dev-dependencies]
crossbeam-utils = "0.6"
once_cell = "1"
